2018-09-28  Charlie Zender  <zender@uci.edu>

	* Fixed bug where ss_alb_fct was set to 1.0 not to odsl/odxl for pure Rayleigh scattering atmospheres (neglected absorption)
	According to this ChangeLog, bug may have been introduced 20071215 and would have affected all simulations where particle scattering was turned-off

2018-06-06  Charlie Zender  <zender@uci.edu>

	* Add slr_zen_ngl_dgr_cmd_ln to ease computations for Cheng

2017-01-17  Charlie Zender  <zender@uci.edu>

	* Increase terms to convergence from original 10 to new 12 in disort3 plkavg()

	* Change lmn_TOA_cmd_ln from nL to ulm m-2 sr-1

2016-12-23  Charlie Zender  <zender@uci.edu>

	* Verified swnb3 passes tst_case_Rayleigh and tst_case_HG

	* Verified swnb3 is BFB with swnb2 for daytime runs

	* Makefile: PRC=D compiles with -fdefault-real-8 -fdefault-double-8 (required for DISORT3)

	* disotest and swnb3 work with above compile switch!

2016-12-22  Charlie Zender  <zender@uci.edu>

	* Define new native type r_ntv with PRC=N and/or by default
	swnb2 works fine with PRC=D
	swnb2 and swnb3 fail in rbn_vec() with PRC=F and PRC=N (also triggers IEEE underflow and denormal)
	swnb3 fails with with PRC=F
	disotest3 passes all tests with PRC=F
	disotest3 fails all tests with PRC=D, PRC=N

	* disotest3 passes all tests when compiled with PRC=S

	* Copy swnb2.F90 to swnb3.F90 to migrate to DISORT3

2016-08-02  Charlie Zender  <zender@uci.edu>

	* Change real_tiny from 1.0e-10 to 1.0e-20

2016-06-13  Charlie Zender  <zender@uci.edu>

	* Fix bug in normalization of flx_ngt_TOA. Now lmn_ngt_TOA == lmn_bb_aa_ndr_TOA.

2016-05-27  Charlie Zender  <zender@uci.edu>

	* Allow command-line input of sfc_tpt and sfc_msv

2016-05-26  Charlie Zender  <zender@uci.edu>

	* Add bottom surface emissivity (default 1.0) BEMIS to DISORT and SWNB2

2016-05-20  Charlie Zender  <zender@uci.edu>

	* Verify everything works when str_nbr=plr_nbr. Yay!
	Fixes bug (negative reflectances and radiances) spotted by Xianwei Wang in ~2010